@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Ubic
 
 0.07
+       * Fix restart command using Ubic instead of $service object
        * Add support for getting cached status
 
 0.06     Tue Nov  5 19:19:28 2013
